[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/mainmenu/playgame/playgame.gd" type="Script" id=1]
[ext_resource path="res://assets/common/themes/iso_dark.theme" type="Theme" id=2]

[node name="PlayGame" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateGameMenu" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="PortLine" type="HBoxContainer" parent="CreateGameMenu"]
margin_right = 1024.0
margin_bottom = 30.0

[node name="Port" type="Label" parent="CreateGameMenu/PortLine"]
margin_top = 4.0
margin_right = 30.0
margin_bottom = 26.0
text = "Port"

[node name="PortField" type="LineEdit" parent="CreateGameMenu/PortLine"]
margin_left = 34.0
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "42420"
caret_blink = true
caret_blink_speed = 0.5

[node name="Name" type="HBoxContainer" parent="CreateGameMenu"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 68.0
alignment = 1

[node name="Name" type="Label" parent="CreateGameMenu/Name"]
margin_top = 4.0
margin_right = 43.0
margin_bottom = 26.0
text = "Name"

[node name="NameField" type="LineEdit" parent="CreateGameMenu/Name"]
margin_left = 47.0
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Create" type="Button" parent="CreateGameMenu"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 110.0
text = "CREATE"

[node name="Back" type="Button" parent="CreateGameMenu"]
margin_top = 118.0
margin_right = 1024.0
margin_bottom = 152.0
text = "BACK"

[node name="JoinGameMenu" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostnameLine" type="HBoxContainer" parent="JoinGameMenu"]
margin_right = 640.0
margin_bottom = 30.0

[node name="Hostname" type="Label" parent="JoinGameMenu/HostnameLine"]
margin_top = 4.0
margin_right = 74.0
margin_bottom = 26.0
text = "Hostname"

[node name="HostnameField" type="LineEdit" parent="JoinGameMenu/HostnameLine"]
margin_left = 78.0
margin_right = 640.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "localhost"
caret_blink = true
caret_blink_speed = 0.5

[node name="Port" type="HBoxContainer" parent="JoinGameMenu"]
margin_top = 38.0
margin_right = 640.0
margin_bottom = 68.0

[node name="Port" type="Label" parent="JoinGameMenu/Port"]
margin_top = 4.0
margin_right = 30.0
margin_bottom = 26.0
text = "Port"

[node name="PortField" type="LineEdit" parent="JoinGameMenu/Port"]
margin_left = 34.0
margin_right = 640.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "42420"
caret_blink = true
caret_blink_speed = 0.5

[node name="Name" type="HBoxContainer" parent="JoinGameMenu"]
margin_top = 76.0
margin_right = 640.0
margin_bottom = 106.0

[node name="Name" type="Label" parent="JoinGameMenu/Name"]
margin_top = 4.0
margin_right = 43.0
margin_bottom = 26.0
text = "Name"

[node name="NameField" type="LineEdit" parent="JoinGameMenu/Name"]
margin_left = 47.0
margin_right = 640.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Connect" type="Button" parent="JoinGameMenu"]
margin_top = 114.0
margin_right = 640.0
margin_bottom = 148.0
text = "CONNECT"

[node name="Back" type="Button" parent="JoinGameMenu"]
margin_top = 156.0
margin_right = 640.0
margin_bottom = 190.0
text = "BACK"

[node name="PlayGameMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="Tutorial" type="Button" parent="PlayGameMenu"]
margin_right = 1024.0
margin_bottom = 34.0
disabled = true
text = "TUTORIAL"
flat = true

[node name="JoinGame" type="Button" parent="PlayGameMenu"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 76.0
text = "JOIN GAME"
flat = true

[node name="CreateGame" type="Button" parent="PlayGameMenu"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 118.0
text = "CREATE GAME"
flat = true

[node name="CreateTunneledGame" type="Button" parent="PlayGameMenu"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 160.0
text = "CREATE TUNNELED GAME"
flat = true

[node name="Back" type="Button" parent="PlayGameMenu"]
margin_top = 168.0
margin_right = 1024.0
margin_bottom = 202.0
text = "BACK"
flat = true

[node name="CreateTunneledGameMenu" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="PortLine" type="HBoxContainer" parent="CreateTunneledGameMenu"]
margin_right = 1024.0
margin_bottom = 30.0

[node name="Port" type="Label" parent="CreateTunneledGameMenu/PortLine"]
margin_top = 4.0
margin_right = 30.0
margin_bottom = 26.0
text = "Port"

[node name="PortField" type="LineEdit" parent="CreateTunneledGameMenu/PortLine"]
margin_left = 34.0
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "42420"
caret_blink = true
caret_blink_speed = 0.5

[node name="Name" type="HBoxContainer" parent="CreateTunneledGameMenu"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 68.0
alignment = 1

[node name="Name" type="Label" parent="CreateTunneledGameMenu/Name"]
margin_top = 4.0
margin_right = 43.0
margin_bottom = 26.0
text = "Name"

[node name="NameField" type="LineEdit" parent="CreateTunneledGameMenu/Name"]
margin_left = 47.0
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="NgrokInfo" type="HBoxContainer" parent="CreateTunneledGameMenu"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 110.0
alignment = 1

[node name="NgrokDir" type="Button" parent="CreateTunneledGameMenu/NgrokInfo"]
margin_right = 140.0
margin_bottom = 34.0
text = "Select ngrok Path"

[node name="Authtoken" type="Label" parent="CreateTunneledGameMenu/NgrokInfo"]
margin_left = 144.0
margin_top = 6.0
margin_right = 219.0
margin_bottom = 28.0
text = "Authtoken"

[node name="AuthtokenField" type="LineEdit" parent="CreateTunneledGameMenu/NgrokInfo"]
margin_left = 223.0
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="CreateTunneled" type="Button" parent="CreateTunneledGameMenu"]
margin_top = 118.0
margin_right = 1024.0
margin_bottom = 152.0
text = "CREATE"

[node name="Back" type="Button" parent="CreateTunneledGameMenu"]
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 194.0
text = "BACK"

[node name="NgrokDirField" type="FileDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
size_flags_horizontal = 3
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Documents/Godot/Godot Projects/opensuspect-main/src"
current_path = "/Documents/Godot/Godot Projects/opensuspect-main/src/"
[connection signal="text_entered" from="CreateGameMenu/Name/NameField" to="." method="_on_NameField_text_entered_create"]
[connection signal="pressed" from="CreateGameMenu/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CreateGameMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="text_entered" from="JoinGameMenu/Name/NameField" to="." method="_on_NameField_text_entered_join"]
[connection signal="pressed" from="JoinGameMenu/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="JoinGameMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="PlayGameMenu/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="PlayGameMenu/CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="PlayGameMenu/CreateTunneledGame" to="." method="_on_CreateTunneledGame_pressed"]
[connection signal="pressed" from="PlayGameMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="text_entered" from="CreateTunneledGameMenu/Name/NameField" to="." method="_on_NameField_text_entered_create"]
[connection signal="pressed" from="CreateTunneledGameMenu/NgrokInfo/NgrokDir" to="." method="_on_NgrokDir_pressed"]
[connection signal="pressed" from="CreateTunneledGameMenu/CreateTunneled" to="." method="_on_CreateTunneled_pressed"]
[connection signal="pressed" from="CreateTunneledGameMenu/Back" to="." method="_on_Back_pressed"]
